#7826 - Navigation - Fixed dropdown alignment bug

--- a/Swift/Files/Templates/Designs/Swift/Assets/_src/scss/2-components/_nav.scss
+++ b/Swift/Files/Templates/Designs/Swift/Assets/_src/scss/2-components/_nav.scss
@@ -9,17 +9,11 @@
 
 	.dropdown {
 
-		.dropdown-menu {
-			margin-top: 0;
-			top: auto;
-			left: auto;
-		}
-
 		.dropdown-menu:empty {
 			padding: 0;
 		}
 
-		.dropdown-toggle {
+		.dropdown-toggle:hover {
 			position: relative;
 
 			&::before {
